--- a/configs/pa_po_nuscenes_trainval_r50.yaml
+++ b/configs/pa_po_nuscenes_trainval_r50.yaml
@@ -25,10 +25,10 @@ model:
     pix_fusion_path: ./checkpoints/resnet18-5c106cde.pth
     use_sara: True
     use_att: True
-    model_load_path: ./nu_8k2b4l_e13.pt
-    model_save_path: ./nu_8k2b4l.pt
-    train_batch_size: 1
-    val_batch_size: 1
+    model_load_path: null
+    model_save_path: ./nu_4xbs2_NSCC.pt
+    train_batch_size: 2
+    val_batch_size: 2
     learning_rate: 0.004
     LR_MILESTONES: [100, 150,200]
     LR_GAMMA: 0.5
