--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 data/
 lcps/
 dataloader/*
-*.pyc
-*.nbc
-*.nbi
+**.pyc
+**.nbc
+**.nbi
+dataloader/__pycache__/process_panoptic_ori.cpython-38.pyc
+dataloader/__pycache__/__init__.cpython-38.pyc
