--- a/configs/pa_po_nuscenes_test.yaml
+++ b/configs/pa_po_nuscenes_test.yaml
@@ -1,8 +1,8 @@
 dataset:
     name: nuscenes
     version: v1.0-test
-    path: ../data/nuscenes
-    sample_pkl_path: ../data/nuscenes/pkl_files
+    path: ./data/nuscenes
+    sample_pkl_path: ./data/nuscenes/pkl_files
     rotate_aug: True
     flip_aug: True
     max_volume_space: [ 100, 3.1415926, 3 ]
@@ -14,10 +14,10 @@ dataset:
     min_points: 15
 model:
     pix_fusion: True
-    pix_fusion_path: ../checkpoints/resnet18-5c106cde.pth
+    pix_fusion_path: ./checkpoints/resnet18-5c106cde.pth
     use_sara: True
     use_att: True
-    model_load_path: null
+    model_load_path: nusc_79.8.pt
     test_batch_size: 2
     post_proc:
         threshold: 0.1
