--- a/configs/pa_po_nuscenes_val_mini.yaml
+++ b/configs/pa_po_nuscenes_val_mini.yaml
@@ -1,12 +1,12 @@
 model_name: lcps
 dataset:
     name: nuscenes
-    version: v1.0-trainval
-    path: data/nuscenes
-    sample_pkl_path: data/nuscenes/pkl_files
+    version: v1.0-mini
+    path: data/nuscenes_mini
+    sample_pkl_path: data/nuscenes/pkl_files_LCPS
     rotate_aug: True
     flip_aug: True
-    max_volume_space: [ 100, 3.1415926, 3 ]
+    max_volume_space: [ 50, 3.1415926, 3 ]
     min_volume_space: [ 0, -3.1415926, -5 ]
     gt_generator:
         sigma: 5
@@ -18,8 +18,13 @@ model:
     pix_fusion_path: checkpoints/resnet18-5c106cde.pth
     use_sara: True
     use_att: True
-    model_load_path: ./nusc_79.8.pt
+    model_load_path: nu_8xbs2_NSCC.pt
     val_batch_size: 2
+    learning_rate: 0.004
+    LR_MILESTONES: [100, 150,200]
+    LR_GAMMA: 0.5
+    check_iter: 4000
+    max_epoch: 300
     post_proc:
         threshold: 0.1
         nms_kernel: 5
