--- a/configs/pa_po_nuscenes_val_r50.yaml
+++ b/configs/pa_po_nuscenes_val_r50.yaml
@@ -3,7 +3,7 @@ dataset:
     name: nuscenes
     version: v1.0-trainval
     path: ./data/nuscenes
-    sample_pkl_path: ./data/nuscenes/pkl_files
+    sample_pkl_path: ./data/nuscenes/pkl_files_LCPS
     rotate_aug: True
     flip_aug: True
     max_volume_space: [ 50, 3.1415926, 3 ]
@@ -15,11 +15,11 @@ dataset:
     min_points: 15
 model:
     pix_fusion: True
-    pix_fusion_path: ./checkpoints/resnet18-5c106cde.pth
+    pix_fusion_path: checkpoints/resnet18-5c106cde.pth
     use_sara: True
     use_att: True
-    model_load_path: ./nusc_79.8.pt
-    val_batch_size: 1
+    model_load_path: nu_8xbs2_NSCC.pt
+    val_batch_size: 2
     post_proc:
         threshold: 0.1
         nms_kernel: 5
