misc training scripts updates.

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,7 @@ dataloader/*
 **.nbi
 **.npy
 **.npz
-dataloader/__pycache__/process_panoptic_ori.cpython-38.pyc
-dataloader/__pycache__/__init__.cpython-38.pyc
+misc/
+dataloader/__pycache__/
+networks/__pycache__/
+utils/__pycache__/
